Add contact section with email and GitHub links

--- a/index.html
+++ b/index.html
@@ -110,6 +110,44 @@
             <h2 style="text-align: center; margin-bottom: 2rem;">Get In Touch</h2>
             <div style="text-align: center;">
                 <p style="margin-bottom: 2rem; font-size: 1.2rem;">Ready to work together? Let's build something amazing!</p>
+                <a href="mailto:ebonginiubong9@gmail.com" class="btn btn-primary">📧 Email Me</a>
+                <a href="https://github.com/Wiper15" class="btn btn-outline" style="margin-left: 1rem;">🐙 My GitHub</a>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 Iniubong Ebong. Web3 Developer & Cybersecurity Specialist.</p>
+            <div class="social-links">
+                <a href="https://github.com/Wiper15">GitHub</a>
+                <a href="https://www.linkedin.com/in/iniubong-ebong-a82900362?utm_source=share_via&utm_content=profile&utm_medium=member_android">LinkedIn</a>
+                <a href="https://www.facebook.com/share/14QuQgwgwoq/">Facebook</a>
+                <a href="https://x.com/wipernation1?t=t99HFGiJnTKOOoRSQt1rzg&s=09">Twitter</a>
+                <a href="https://www.tiktok.com/@wipernation1?_r=1&_t=ZS-91gJDZqRI40">TikTok</a>
+                <a href="mailto:ebonginiubong9@gmail.com">Email</a>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>                    <h3>TownPlanPay</h3>
+                    <p>Digital payment solutions with milestone tracking</p>
+                    <div class="tech-tags">
+                        <span class="tech-tag">Web3</span>
+                        <span class="tech-tag">Payments</span>
+                        <span class="tech-tag">Smart Contracts</span>
+                    </div>
+                    <a href="https://github.com/Wiper15/wipernation-townplanpay" class="project-link">View on GitHub →</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="contact-preview" style="padding: 80px 0; background: #f8f9fa;">
+        <div class="container">
+            <h2 style="text-align: center; margin-bottom: 2rem;">Get In Touch</h2>
+            <div style="text-align: center;">
+                <p style="margin-bottom: 2rem; font-size: 1.2rem;">Ready to work together? Let's build something amazing!</p>
                 <a href="mailto:your-email@example.com" class="btn btn-primary">📧 Email Me</a>
                 <a href="https://github.com/Wiper15" class="btn btn-outline" style="margin-left: 1rem;">🐙 My GitHub</a>
             </div>
