--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
             </div>
             <div class="nav-menu">
                 <a href="index.html" class="nav-link">Home</a>
-                <a href="projects.html" class="nav-link">Projects</a>
-                <a href="resume.html" class="nav-link">Resume</a>
-                <a href="contact.html" class="nav-link">Contact</a>
+                <a href="#projects" class="nav-link">Projects</a>
+                <a href="#contact" class="nav-link">Contact</a>
             </div>
         </div>
     </nav>
@@ -24,9 +23,7 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <div class="hero-photo-placeholder" style="width: 150px; height: 150px; background: rgba(255,255,255,0.2); border-radius: 50%; margin: 0 auto 2rem; display: flex; align-items: center; justify-content: center; font-size: 0.9rem;">
-                    Add Your Photo
-                </div>
+                <img src="IMG.20250425.114..." alt="Iniubong Ebong" class="hero-photo" style="width: 150px; height: 150px; border-radius: 50%; border: 4px solid white; margin: 0 auto 2rem; display: block; object-fit: cover;">
                 <h1>Iniubong Ebong</h1>
                 <h2>Web3 Creator | Cybersecurity Learner | Entrepreneur</h2>
                 <p class="hero-description">
@@ -93,6 +90,46 @@
                 
                 <div class="project-card">
                     <h3>TownPlanPay</h3>
+                    <p>Digital payment solutions with milestone tracking</p>
+                    <div class="tech-tags">
+                        <span class="tech-tag">Web3</span>
+                        <span class="tech-tag">Payments</span>
+                        <span class="tech-tag">Smart Contracts</span>
+                    </div>
+                    <a href="https://github.com/Wiper15/wipernation-townplanpay" class="project-link">View on GitHub →</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="contact-preview">
+        <div class="container">
+            <h2>Get In Touch</h2>
+            <div class="contact-content">
+                <p>Ready to work together? Let's build something amazing!</p>
+                <div class="contact-buttons">
+                    <a href="mailto:ebonginiubong9@gmail.com" class="btn btn-primary">📧 Email Me</a>
+                    <a href="https://github.com/Wiper15" class="btn btn-outline">🐙 My GitHub</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 Iniubong Ebong. Web3 Developer & Cybersecurity Specialist.</p>
+            <div class="social-links">
+                <a href="https://github.com/Wiper15">GitHub</a>
+                <a href="https://www.linkedin.com/in/iniubong-ebong-a82900362?utm_source=share_via&utm_content=profile&utm_medium=member_android">LinkedIn</a>
+                <a href="https://www.facebook.com/share/14QuQgwgwoq/">Facebook</a>
+                <a href="https://x.com/wipernation1?t=t99HFGiJnTKOOoRSQt1rzg&s=09">Twitter</a>
+                <a href="https://www.tiktok.com/@wipernation1?_r=1&_t=ZS-91gJDZqRI40">TikTok</a>
+                <a href="mailto:ebonginiubong9@gmail.com">Email</a>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>                    <h3>TownPlanPay</h3>
                     <p>Digital payment solutions with milestone tracking</p>
                     <div class="tech-tags">
                         <span class="tech-tag">Web3</span>
