--- a/index.html
+++ b/index.html
@@ -1,98 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniubong Ebong - Web3 Developer & Cybersecurity Specialist</title>
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
-    <nav class="navbar">
-        <div class="nav-container">
-            <div class="nav-logo">
-                <a href="index.html">Iniubong Ebong</a>
-            </div>
-            <div class="nav-menu">
-                <a href="index.html" class="nav-link">Home</a>
-                <a href="#projects" class="nav-link">Projects</a>
-                <a href="#contact" class="nav-link">Contact</a>
-            </div>
-        </div>
-    </nav>
-
-    <section class="hero">
+    <section id="contact" class="contact-preview">
         <div class="container">
-            <div class="hero-content">
-                <img src="IMG.20250425.114..." alt="Iniubong Ebong" class="hero-photo" style="width: 150px; height: 150px; border-radius: 50%; border: 4px solid white; margin: 0 auto 2rem; display: block; object-fit: cover;">
-                <h1>Iniubong Ebong</h1>
-                <h2>Web3 Creator | Cybersecurity Learner | Entrepreneur</h2>
-                <p class="hero-description">
-                    Building the future of digital payments and Web3 solutions. 
-                    Currently developing PayGuard AI and exploring cybersecurity frontiers.
-                </p>
-                <div class="hero-buttons">
-                    <a href="#projects" class="btn btn-primary">🚀 View My Projects</a>
-                    <a href="#contact" class="btn btn-secondary">💼 Hire Me</a>
-                </div>
-            </div>
+            <h2>Get In Touch</h2>
+            ...
         </div>
     </section>
 
-    <section class="stats">
+    <footer class="footer">
         <div class="container">
-            <div class="stats-grid">
-                <div class="stat-item">
-                    <h3>3+</h3>
-                    <p>Active Projects</p>
-                </div>
-                <div class="stat-item">
-                    <h3>22</h3>
-                    <p>Recent Commits</p>
-                </div>
-                <div class="stat-item">
-                    <h3>Web3</h3>
-                    <p>Specialization</p>
-                </div>
-                <div class="stat-item">
-                    <h3>AI</h3>
-                    <p>Integration</p>
-                </div>
+            <p>&copy; 2024 Iniubong Ebong. Web3 Developer & Cybersecurity Specialist.</p>
+            <div class="social-links">
+                ...
             </div>
         </div>
-    </section>
+    </footer>
+</body>
+</html>
 
-    <section id="projects" class="featured-projects">
+    <h3>TownPlanPay</h3>
+    <p>Digital payment solutions with milestone tracking</p>
+    ...
+    <section id="contact" class="contact-preview" style="padding: 80px 0; background: #f8f9fa;">
         <div class="container">
-            <h2>My Projects</h2>
-            <div class="projects-grid">
-                <div class="project-card">
-                    <h3>PayGuard AI</h3>
-                    <p>AI agent that marks Solana NFTs as immutable proof when salary is late</p>
-                    <div class="tech-tags">
-                        <span class="tech-tag">Python</span>
-                        <span class="tech-tag">Solana</span>
-                        <span class="tech-tag">Web3</span>
-                        <span class="tech-tag">Mistral AI</span>
-                    </div>
-                    <a href="https://github.com/Wiper15/PayGuard" class="project-link">View on GitHub →</a>
-                </div>
-                
-                <div class="project-card">
-                    <h3>AI Genesis Automation</h3>
-                    <p>Advanced automation system with AI capabilities</p>
-                    <div class="tech-tags">
-                        <span class="tech-tag">Automation</span>
-                        <span class="tech-tag">AI</span>
-                        <span class="tech-tag">Python</span>
-                    </div>
-                    <a href="https://github.com/Wiper15/air-genesis-opus-automation" class="project-link">View on GitHub →</a>
-                </div>
-                
-                <div class="project-card">
-                    <h3>TownPlanPay</h3>
-                    <p>Digital payment solutions with milestone tracking</p>
-                    <div class="tech-tags">
-                        <span class="tech-tag">Web3</span>
+            <h2 style="text-align: center; margin-bottom: 2rem;">Get In Touch</h2>
+            ...                        <span class="tech-tag">Web3</span>
                         <span class="tech-tag">Payments</span>
                         <span class="tech-tag">Smart Contracts</span>
                     </div>
