Commit to branch
Updated the HTML structure and content of the portfolio page, including new meta tags, sections, and project details.

--- a/index.html
+++ b/index.html
@@ -1,71 +1,4 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Iniubong Ebong — Web3 Developer & Cybersecurity Specialist</title>
-  <meta name="description" content="Iniubong Ebong — Web3 Creator, Cybersecurity Learner, Entrepreneur. Projects: PayGuard AI, AI Genesis Automation, TownPlanPay" />
-
-  <!-- Open Graph / Social -->
-  <meta property="og:title" content="Iniubong Ebong — Web3 Developer & Cybersecurity Specialist" />
-  <meta property="og:description" content="Building the future of digital payments and Web3 solutions. Currently developing PayGuard AI and exploring cybersecurity." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://wiper15.github.io/" />
-  <meta property="og:image" content="https://wiper15.github.io/assets/og-image.svg" />
-
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <link rel="icon" href="assets/favicon.ico" />
-</head>
-<body>
-  <div class="site">
-    <header aria-label="Site header">
-      <a class="brand" href="/">
-        <div class="logo" aria-hidden="true">IE</div>
-        <div>
-          <div class="brand-name">Iniubong Ebong</div>
-          <div class="brand-sub">Web3 Creator · Cybersecurity Learner</div>
-        </div>
-      </a>
-
-      <nav aria-label="Primary navigation">
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-        <a class="btn btn-outline" href="https://github.com/Wiper15" target="_blank" rel="noopener">🐙 GitHub</a>
-      </nav>
-    </header>
-
-    <section class="hero" aria-labelledby="hero-heading">
-      <h1 id="hero-heading">Iniubong Ebong</h1>
-      <p class="lead">Building the future of digital payments and Web3 solutions. Currently developing PayGuard AI and exploring cybersecurity.</p>
-
-      <div class="stats" role="list">
-        <div class="stat" role="listitem"><strong>3+</strong><div class="stat-label">Active Projects</div></div>
-        <div class="stat" role="listitem"><strong>22</strong><div class="stat-label">Recent Commits</div></div>
-        <div class="stat" role="listitem"><strong>Web3</strong><div class="stat-label">Specialization</div></div>
-        <div class="stat" role="listitem"><strong>AI</strong><div class="stat-label">Integration</div></div>
-      </div>
-
-      <div class="hero-cta">
-        <a class="btn btn-primary" href="#projects">View My Projects</a>
-        <a class="btn btn-outline" href="#contact">Hire Me</a>
-      </div>
-    </section>
-
-    <main>
-      <section id="projects" aria-labelledby="projects-title">
-        <h2 id="projects-title" class="section-title">My Projects</h2>
-
-        <div class="projects" role="list">
-          <article class="card" role="listitem" aria-labelledby="p-payguard">
-            <h3 id="p-payguard">PayGuard AI</h3>
-            <p>AI agent that mints Solana NFTs as immutable proof when salary is late.</p>
-            <div class="tech-tags" aria-hidden="true">
-              <span class="tag">Python</span>
-              <span class="tag">Solana</span>
-              <span class="tag">AI</span>
-            </div>
-            <p class="project-link"><a href="https://github.com/Wiper15/payguard-ai" target="_blank" rel="noopener">View on GitHub →</a></p>
-          </article>
+article>
 
           <article class="card" role="listitem" aria-labelledby="p-ai-genesis">
             <h3 id="p-ai-genesis">AI Genesis Automation</h3>
@@ -279,6 +212,170 @@
         });
       });
     })();
+  </script>
+</body>
+</html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Iniubong Ebong — Portfolio</title>
+  <meta name="description" content="Web3 developer, cybersecurity specialist, content creator. Chat with me powered by Gemini." />
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="icon" href="assets/favicon.ico" />
+</head>
+<body>
+  <div class="site">
+    <header>
+      <a class="brand" href="/">
+        <div class="logo" aria-hidden="true">IE</div>
+        <div>
+          <div class="brand-name">Iniubong Ebong</div>
+          <div class="brand-sub">Web3 Creator · Cybersecurity Learner</div>
+        </div>
+      </a>
+      <nav>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+        <a class="btn btn-outline" href="https://github.com/Wiper15" target="_blank" rel="noopener">🐙 GitHub</a>
+      </nav>
+    </header>
+
+    <section class="hero" aria-labelledby="hero-heading">
+      <h1 id="hero-heading">Iniubong Ebong</h1>
+      <p class="lead">Building the future of digital payments and Web3 solutions. Currently developing PayGuard AI and exploring cybersecurity.</p>
+      <div class="hero-cta">
+        <a class="btn btn-primary" href="#projects">View My Projects</a>
+        <a class="btn btn-outline" href="#contact">Hire Me</a>
+      </div>
+    </section>
+
+    <main>
+      <section id="projects">
+        <h2 class="section-title">My Projects</h2>
+        <div class="projects">
+          <article class="card">
+            <h3>PayGuard AI</h3>
+            <p>AI agent that mints Solana NFTs as immutable proof when salary is late.</p>
+            <p><a href="https://github.com/Wiper15/payguard-ai" target="_blank" rel="noopener">View on GitHub →</a></p>
+          </article>
+
+          <article class="card">
+            <h3>AI Genesis Automation</h3>
+            <p>Automation workflows with advanced AI capabilities for operations and testing.</p>
+            <p><a href="https://github.com/Wiper15/ai-genesis" target="_blank" rel="noopener">View on GitHub →</a></p>
+          </article>
+
+          <article class="card">
+            <h3>TownPlanPay</h3>
+            <p>Digital payment solutions with milestone tracking and smart-contract integration.</p>
+            <p><a href="https://github.com/Wiper15/wipernation-townplanpay" target="_blank" rel="noopener">View on GitHub →</a></p>
+          </article>
+        </div>
+      </section>
+
+      <!-- Chat widget -->
+      <section id="chat" class="contact">
+        <h2 class="section-title">Chat with me (AI)</h2>
+        <p>Ask about my projects, articles, design work, or general Web3 & AI topics.</p>
+
+        <div id="chat-widget" style="max-width:760px;margin:0 auto;">
+          <div id="messages" style="min-height:160px;border:1px solid #e6e9ef;padding:.75rem;border-radius:8px;overflow:auto;background:#fff"></div>
+
+          <form id="chat-form" style="display:flex;gap:.5rem;margin-top:.75rem">
+            <input id="chat-input" name="q" placeholder="Ask me anything..." style="flex:1;padding:.6rem;border-radius:8px;border:1px solid #e6e9ef" required />
+            <button type="submit" class="btn btn-primary" style="padding:.5rem 1rem">Send</button>
+          </form>
+
+          <div style="margin-top:.5rem;font-size:.85rem;color:#6b7280">
+            Note: This chat uses a serverless proxy on Netlify so keys remain secret.
+          </div>
+        </div>
+      </section>
+
+      <section id="contact" class="contact">
+        <h2 class="section-title">Get In Touch</h2>
+        <p>Ready to work together? Let's build something amazing.</p>
+        <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thanks.html">
+          <input type="hidden" name="form-name" value="contact">
+          <p class="visually-hidden"><label>Don’t fill this out if you're human: <input name="bot-field"></label></p>
+          <label>Your name <input type="text" name="name" required></label>
+          <label>Email <input type="email" name="email" required></label>
+          <label>Message <textarea name="message" rows="4" required></textarea></label>
+          <div style="margin-top:.5rem">
+            <button type="submit" class="btn btn-primary">Send</button>
+            <a class="btn btn-outline" href="mailto:ebonginiubong9@gmail.com">📧 Email Me</a>
+          </div>
+        </form>
+      </section>
+    </main>
+
+    <footer>
+      <div>© 2024 Iniubong Ebong. Web3 Developer & Cybersecurity Specialist.</div>
+      <div class="social">
+        <a href="https://github.com/Wiper15">GitHub</a> ·
+        <a href="https://www.linkedin.com/in/iniubong-ebong-a82900362">LinkedIn</a>
+      </div>
+    </footer>
+  </div>
+
+  <script src="assets/js/main.js" defer></script>
+
+  <!-- Inline chat UI hookup (calls Netlify function at /.netlify/functions/chat) -->
+  <script>
+  (function(){
+    const form = document.getElementById('chat-form');
+    const input = document.getElementById('chat-input');
+    const messages = document.getElementById('messages');
+
+    function append(role, text){
+      const d = document.createElement('div');
+      d.style.padding = '.4rem 0';
+      d.textContent = (role === 'user' ? 'You: ' : 'Bot: ') + text;
+      messages.appendChild(d);
+      messages.scrollTop = messages.scrollHeight;
+    }
+
+    // Keep a simple conversation array (small)
+    const conversation = [{role:'system', content:'You are a helpful professional Web3 developer and content creator.'}];
+
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const text = input.value.trim();
+      if(!text) return;
+      input.value = '';
+      append('user', text);
+      conversation.push({role:'user', content:text});
+
+      // temporary loader item
+      const loader = document.createElement('div');
+      loader.textContent = 'Bot: typing...';
+      loader.style.opacity = '0.7';
+      messages.appendChild(loader);
+      messages.scrollTop = messages.scrollHeight;
+
+      try {
+        const res = await fetch('/.netlify/functions/chat', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ messages: conversation })
+        });
+        const json = await res.json();
+        loader.remove();
+        if (json.error) {
+          append('bot', 'Error: ' + (json.error.message || json.error));
+          return;
+        }
+        const reply = json.reply || (json.raw && JSON.stringify(json.raw));
+        append('bot', reply);
+        conversation.push({role:'assistant', content: reply});
+      } catch (err) {
+        loader.remove();
+        append('bot', 'Network or server error: ' + err.message);
+      }
+    });
+  })();
   </script>
 </body>
 </html>
